// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/zhangshanwen/transport/utils/proto";
option java_multiple_files = true;
option java_package = "io.grpc.transport.proto";
option java_outer_classname = "Proto";
import "utils/proto/base.proto";

package proto;

service  Module{
  rpc Send (ModuleRequest) returns (ModuleReply) {}
  rpc Ping (NormalRequest)  returns (NormalReply){}
}

message ModuleRequest {
  string addr = 1;
  int32 pid = 2;
  string module = 3;
}

message ModuleReply {
  string message = 1;
}

